--- a/mappings/series-tvdb.en.yaml
+++ b/mappings/series-tvdb.en.yaml
@@ -1,6 +1,6 @@
 # PlexAniSync: TheTVDB Series Mappings in English
 entries:
-  - title: "86: Eighty Sixx"
+  - title: "86: Eighty Six"
     synonyms:
       - "86"
       - "Eighty Six"
