--- a/.github/workflows/converter.yml
+++ b/.github/workflows/converter.yml
@@ -4,8 +4,8 @@ on:
   push:
     branches:
       - main
-    paths:
-      - mappings/**
+#    paths:
+#      - mappings/**
 jobs:
   converter:
     name: Run converter
