--- a/.github/workflows/converter.yml
+++ b/.github/workflows/converter.yml
@@ -18,7 +18,6 @@ jobs:
         python-version: 3.9
     - name: Install yaml-to-table
       run: |
-        python -m pip install --upgrade pip
-        pip install git+git://github.com/ishswar/yaml-to-table.git@master
+        wget https://raw.githubusercontent.com/ishswar/yaml-to-table/master/yaml_to_table.py
     - name: Convert Series-TVDB-English from YAML to Table
       run: python yaml_to_table.py --inputFile 'mappings/series-tvdb.en.yaml' --out html
