--- a/.github/workflows/converter.yml
+++ b/.github/workflows/converter.yml
@@ -20,4 +20,4 @@ jobs:
       run: |
         wget https://raw.githubusercontent.com/ishswar/yaml-to-table/master/yaml_to_table.py
     - name: Convert Series-TVDB-English from YAML to Table
-      run: python yaml_to_table.py --inputFile 'mappings/series-tvdb.en.yaml' --out html
+      run: python yaml_to_table.py --inputFile mappings/series-tvdb.en.yaml --out html
