--- a/.github/workflows/converter.yml
+++ b/.github/workflows/converter.yml
@@ -20,6 +20,7 @@ jobs:
       run: |
         python -m pip install --upgrade pip
         pip install oyaml
+        pip install prettytable
     - name: Install yaml-to-table
       run: wget https://raw.githubusercontent.com/ishswar/yaml-to-table/master/yaml_to_table.py
     - name: Convert Series-TVDB-English from YAML to Table
